--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Speech To Text</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="mic-icon.png">
+    <link rel="icon" href="icon.png">
 </head>
 <body>
     <h1>Speech to text</h1>
